[gd_scene load_steps=52 format=3 uid="uid://4im2e3s6uvce"]

[ext_resource type="Script" uid="uid://bf1d13ckty6fs" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://clavr1dqbvim7" path="res://Knight_player/Attack_KG_1.png" id="2_hb8ge"]
[ext_resource type="Texture2D" uid="uid://br8h88x8a7g81" path="res://Knight_player/Attack_KG_2.png" id="3_e1ltt"]
[ext_resource type="Texture2D" uid="uid://bu6xwmh6856qf" path="res://Knight_player/Attack_KG_3.png" id="4_dxifv"]
[ext_resource type="Texture2D" uid="uid://di2ouynhr2dsg" path="res://Knight_player/Attack_KG_4.png" id="5_pwjut"]
[ext_resource type="Texture2D" uid="uid://qb0hjsmnfcvl" path="res://Knight_player/Hurt_KG_2.png" id="6_hb8ge"]
[ext_resource type="Texture2D" uid="uid://kku85a4nl5q8" path="res://Knight_player/Idle_KG_2.png" id="6_n0g06"]
[ext_resource type="Texture2D" uid="uid://cbegd5kdixffc" path="res://Knight_player/Walking_KG_2.png" id="7_ar8e5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmspm"]
size = Vector2(54, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_hb8ge")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_hb8ge")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_hb8ge")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_hb8ge")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_hb8ge")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_hb8ge")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("3_e1ltt")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("3_e1ltt")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("3_e1ltt")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_e1ltt")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_e1ltt")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_e1ltt")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("4_dxifv")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("4_dxifv")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("4_dxifv")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("4_dxifv")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("4_dxifv")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("4_dxifv")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("4_dxifv")
region = Rect2(600, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("4_dxifv")
region = Rect2(700, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("4_dxifv")
region = Rect2(800, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("5_pwjut")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("5_pwjut")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("5_pwjut")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("5_pwjut")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("5_pwjut")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("6_hb8ge")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("6_hb8ge")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("6_hb8ge")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("6_hb8ge")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("6_n0g06")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("6_n0g06")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("6_n0g06")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("6_n0g06")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("7_ar8e5")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("7_ar8e5")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("7_ar8e5")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("7_ar8e5")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("7_ar8e5")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("7_ar8e5")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("7_ar8e5")
region = Rect2(600, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wujgv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}],
"loop": false,
"name": &"atk1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}],
"loop": false,
"name": &"atk2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}],
"loop": false,
"name": &"atk3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}],
"loop": false,
"name": &"atk4",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4gyqm")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xmspm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0.116667, 1)
texture_filter = 1
position = Vector2(5, -8)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_wujgv")
animation = &"hurt"
frame = 3
frame_progress = 1.0

[node name="hurt_timer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = -36.5
offset_top = -77.0
offset_right = 338.5
offset_bottom = 11.0
scale = Vector2(0.2, 0.2)
theme_override_constants/outline_size = 26
theme_override_font_sizes/font_size = 64
text = "Lv. 2"
vertical_alignment = 1

[node name="attack_duration" type="Timer" parent="."]

[node name="atk_cd" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="attack_duration" to="." method="_on_attack_duration_timeout"]
[connection signal="timeout" from="atk_cd" to="." method="_on_atk_cd_timeout"]
